<resources>
    <string name="app_name" translatable="false">QNotez</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_actions">Select action</string>
    <string name="action_item_share_chooser">Share your note&#8230;</string>
    <string name="action_item_delete">Delete</string>
    <string name="title_activity_note_add">Add new note</string>
    <string name="edit_note_title">Title&#8230;</string>
    <string name="edit_note_text">Text&#8230;</string>
    <string name="warning_emty_text">Text can\'t be empty!</string>
    <string name="title_activity_note_detail">View or edit</string>
    <string name="title_activity_note_detail_ro">View</string>
    <string name="msg_note_saved">Saved&#8230;</string>
    <string name="msg_warning">Warning</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_note_delete_text">Do you want to delete this note?</string>
    <string name="msg_note_save_text">Do you want to save this note?</string>
    <string name="txt_created">Created</string>
    <string name="txt_updated">Updated</string>
    <string name="title_activity_info">Info</string>
    <string name="txt_copyright" translatable="false">Copyright (c) 2018, Artem \"DOOMer\" Galichkin</string>
    <string name="version">Version</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="settings_title_display">Display</string>
    <string name="settings_key_darkskin" translatable="false">
        useDarkSkin
    </string>
    <string name="settings_titl_darkskin">
        Use dark theme
    </string>

    <!--title for quick search settings dialog-->
    <string name="settings_title_quick_search">Quick search by</string>
    <string name="settings_summary_quick_search">Quick search by note titles or note text.</string>
    <string name="settings_key_quick_search" translatable="false">quicksearchBy</string>
    <string name="settings_qs_by_text" translatable="false">qs_text</string>
    <string name="settings_qS_by_title" translatable="false">qs_title</string>

    <!-- strings for settings of the count displayed note's text lines -->
    <string name="settings_key_count_rows">count_displayed_rows</string>
    <string name="settings_title_count_rows">Preview rows count</string>
    <string name="settings_summary_count_rows">The number of rows in the preview ine main list</string>

    <!-- string for behavior settings -->
    <string name="settings_title_behavior">Behavior</string>
    <string name="settings_key_back_action_note_edit" translatable="false">back_action_note_edit</string>
    <string name="settings_title_back_action_note_edit">Action on back pressing</string>
    <string name="settings_summary_back_action_note_edit">
        Action on back button pressing on the screen for create or edit note
    </string>

    <string name="iten_no_title">No title</string>
    <string name="info_open_source" translatable="false">
        QNotez is an open-source project available at\n https://github.com/DOOMer/qnotez
    </string>

    <string name="changelog_dialog_title">What\'s new</string>

    <string name="nav_list_main">Notes</string>
    <string name="nav_list_trash">Trash</string>

    <string name="snack_msg_deleted">Note is deleted</string>
    <string name="snack_msg_move_to_trash">Moved to trash</string>
    <string name="snack_msg_move_from_trash">Restored from trash</string>

    <string name="txt_empty_notes_list">No notes yet</string>
    <string name="txt_empty_trash">Empty!</string>

    <string name="txt_backup_title">Backup</string>
    <string name="txt_backup_info">
        Save or load backups for your notes.
    </string>

    <string name="txt_backup_load">Load backup</string>
    <string name="txt_backup_save">Save backup</string>
    <string name="txt_notes_count">Notes count</string>
    <string name="txt_backup_date">Backup date</string>
    <string name="txt_storage_perms_deny">
        For work with backups, you must have permissions for read and write  on the external storage.
    </string>
    <string name="txt_backup_permissions">Enable permissions</string>

    <string name="msg_empty_backup_save_empty">Nothing to save. You haven\'t any notes!</string>
    <string name="msg_empty_backup_load_empty">Nothing to restore. Selected backup is empty!</string>
    <string name="msg_empty_backup_load_ok">Backup is loaded!</string>
    <string name="msg_empty_backup_save_ok">Backup is saved!</string>

    <string name="action_clean_trash">Delete all</string>
    <string name="msg_nothin_to_delete">Nothing to delete, your trash is empty!</string>
    <string name="msg_deleted_items">Deleted items</string>
    <string name="msg_clean_trash_text">You are clean trash?</string>

</resources>
