<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/nav_group_main">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/nav_list_main" android:checkable="false" />

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/nav_list_trash" android:checkable="false" />

    </group>
    <group android:checkableBehavior="single" android:id="@+id/nav_group_backup">
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_action_backup"
            android:title="@string/txt_backup_title" android:checkable="false" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/nav_group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_activity_settings" android:checkable="false" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/nav_group_info">
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/title_activity_info" android:checkable="false" />
    </group>

</menu>
